--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,7 +12,7 @@
 }
 
 body {
-  font-family: 'DMSans', sans-serif;
+  font-family: 'DMSans', sans-serif !important;
 }
 
 /* @layer base {
