--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,8 @@
 @font-face {
   font-family: 'DMSans';
   src: url('https://fonts.gstatic.com/s/dmsans/v15/rP2Yp2ywxg089UriI5-g4vlH9VoD8Cmcqbu0-K4.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
+  /* font-weight: normal;
+  font-style: normal; */
 }
 
 body {
